# Symbolic_Security_Layer

./: .gitignore  CHANGELOG.md  GITHUB_PUSH_GUIDE.md  LICENSE  MANIFEST.in  PROJECT_SUMMARY.md  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py
docs/: SACRED_SYMBOL_PROTECTION.md
docs/api/: core.md
docs/guides/: getting-started.md
examples/: pytorch_integration.py  tensorflow_integration.py
src/symbolic_security_layer/: __init__.py  adapters.py  cli.py  core.py  diagnostics.py  preprocessor.py  vscode_backend.py
ssl-demo/: index.html  package.json
ssl-demo/src/: App.jsx
tests/: __init__.py  test_adapters.py  test_core.py  test_diagnostics.py  test_preprocessor.py
vscode-extension/: package-lock.json  package.json
vscode-extension/src/: extension.ts
